--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "puppeteer": "^2.0.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
