--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test prices on the web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node -r esm index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/btfjulio/prices_testing#readme",
   "dependencies": {
+    "axios": "^0.19.1",
     "cheerio": "^1.0.0-rc.3",
+    "esm": "^3.2.25",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {},
